@@ -21,8 +21,9 @@
 #ifndef PRINT_H_
 #define PRINT_H_
 
-#include <R_ext/PrtUtil.h>
 #include "Defn.h"
+#include <R_ext/PrtUtil.h>
+#include <R_ext/Print.h>
 
 #define formatRaw           Rf_formatRaw
 #define formatString        Rf_formatString
