@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1998-2009    The R Core Team
+ *  Copyright (C) 1998-2012    The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
@@ -18,16 +18,14 @@
  */
 
 /*
- * Generally useful print utilities *NOT* relying on R internals (from Defn.h)
- *
- * (not useful anymore; use  R_print struct with SEXP) --> Print.h
+ *  These functions are not part of the API.
  */
 #ifndef PRTUTIL_H_
 #define PRTUTIL_H_
 
 #include <Rinternals.h> // for R_xlen_t
 #include <R_ext/Complex.h>
-#include <R_ext/Print.h>
+//#include <R_ext/Print.h>
 
 #define formatLogical      Rf_formatLogical
 #define formatInteger      Rf_formatInteger
@@ -41,7 +39,6 @@
 #define printIntegerVector Rf_printIntegerVector
 #define printRealVector    Rf_printRealVector
 #define printComplexVector Rf_printComplexVector
-/* #define dropTrailing0      Rf_dropTrailing0 */
 
 #ifdef  __cplusplus
 extern "C" {
@@ -58,7 +55,6 @@ const char *EncodeLogical(int, int);
 const char *EncodeInteger(int, int);
 const char *EncodeReal(double, int, int, int, char);
 const char *EncodeComplex(Rcomplex, int, int, int, int, int, int, char);
-/* const char* dropTrailing0(const char *, char); */
 
 /* Printing */
 void VectorIndex(int, int);
